<resources>
    <string name="app_name">Buku-pedia</string>
    <string name="run_text">"Temukan buku, Perluas Wawasan, Dan jadilah versi terbaik dari dirimu Dengan Setiap Halaman!"</string>
    <string name="back_button">Back</string>
    <string name="get_started">Get Started</string>
    <string name="username_hint">Username</string>
    <string name="register_prompt">Belum punya akun? Register</string>
    <string name="login_button">Login</string>
    <string name="password_hint">Password</string>
    <string name="upcoming_books">Upcoming Books</string>
    <string name="latest_books">Latest Books</string>
    <string name="top_books">Top Books</string>
    <string name="best_deals">Best Deals</string>
    <string name="happy_reading">Happy Reading</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="deskripsi_buku">Deskripsi Buku</string>
    <string name="author">author</string>
    <string name="category">category</string>
    <integer name="price">102</integer>
    <string name="user_email">user_email</string>
    <string name="user_name">user_name</string>
    <string name="delivery_address">delivery_address</string>
    <string name="parkitx_padang_utara">Parkit X, Padang Utara</string>
    <string name="change">Change</string>
    <string name="cash_on_delivery">Cash on Delivery</string>
    <string name="total_price">Total: Rp 238.200</string>
    <string name="pay">Pay</string>
    <string name="pay_methode">Payment Method</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="postal_code">Postal Code</string>
    <string name="save_address">Add</string>
    <string name="payment_success">Payment Success</string>
    <string name="thanks_order">Your Order hass been validated.</string>
    <string name="nama_profile">Nama : Fakhri AR</string>
    <string name="clue_text">Password : ********</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="type_buku">Type</string>
    <string name="Ebook">Softcover</string>
    <string name="Price_Range">Price Range</string>
    <string name="Price">Rp 0 - Rp300"</string>
    <string name="Home">Home</string>
    <string name="Categories">Categories</string>
    <string name="Cart">Cart</string>
    <string name="Account">Account</string>
    <string name="register">Register</string>
    <string name="Sign">Already a member? Sign in</string>
    <string name="Streetadd">Street Address</string>
    <string name="search_icon_description">Search Icon</string>
    <string name="textbook1">Dalam buku ini, Anda akan mempelajari prinsip-prinsip yang ditetapkan Dale Carnegie, yang dikembangkan para penerusnya, dan yang diterapkan oleh jutaan orang. Anda juga akan belajar cara memprogram pendekatan untuk menghadapi berbagai situasi dalam hidup ini. Anda akan belajar cara mendiagnosis kekuatan dan kelemahan Anda serta cara meningkatkan kekuatan sekaligus mengatasi kelemahan.
Aspek-aspek peningkatan hidup yang akan Anda peroleh dari buku ini adalah sebagai berikut.
Cara menyeimbangkan fase-fase utama hidup Anda: pribadi, keluarga, pekerjaan dan karier, aktivitas sosial, dan lainnya.
Cara meminimalkan stres dan kecemasan.
Cara mengembangkan gaya hidup sehat.
Cara berinteraksi paling efektif dengan orang lain.
Cara menjadi pribadi yang karismatik.
Cara menghadapi orang-orang yang rumit.
Cara mengendalikan emosi Anda.
Dalam menerapkan prinsip-prinsip ini, pahami cara Anda sekarang dalam menghadapi tuntutan hidup. Untuk membantu mengidentifikasi sifat-sifat tersebut dan menunjukkan kebutuhan khusus, dalam buku ini, Anda akan menemukan inventori yang dikelola sendiri untuk mengidentifikasi keunggulan dan dalam berbagai bidang hidup Anda.</string>
    <string name="payment">Payment Success</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="confirm1">Confirm</string>
    <string name="bukupedia">Bukupedia</string>
    <string name="book_price">Rp %1$s</string>
</resources>