<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Alamat Pengiriman -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delivery_address"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginBottom="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/parkitx_padang_utara" />

        <Button
            android:id="@+id/btn_change_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change" />
    </LinearLayout>

    <!-- Metode Pembayaran -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pay_methode"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/rb_cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash_on_delivery" />
    </RadioGroup>

    <!-- Total Harga -->
    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/total_price"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="16dp" />

    <!-- Tombol Checkout -->
    <Button
        android:id="@+id/btn_pay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/pay" />
</LinearLayout>
