<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/et_street_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/Streetadd"
        android:textColor="@color/high_contrast_text"
        android:hint="@string/Streetadd"/>

    <EditText
        android:id="@+id/et_city"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/city"
        android:layout_marginTop="8dp"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/et_postal_code"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/postal_code"
        android:layout_marginTop="8dp"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/checkbox_agree_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I agree to the address"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btn_save_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/save_address" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_cancel_background"
            android:textColor="@android:color/black"
            android:text="Cancel" />
    </LinearLayout>
</LinearLayout>