<LinearLayout xlmns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/type_buku"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"> 
            <RadioButton
                android:id="@+id/rb_ebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ebook" />

        </RadioGroup>

        <TextView
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:text="@string/Price_Range"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp" />

        <SeekBar
            android:id="@+id/seekbar_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Price" 
            android:gravity="center_horizontal"
            android:layout_marginTop="8dp" />